--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -1,5 +1,5 @@
-/* this is some magical font-importing.  
-you'll learn about it later. */
+/* bu büyülü bir font içe aktarımıdır.
+bunu daha sonra öğreneceksiniz. */
 @import url('https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400;1,900&display=swap');
 
 body {
@@ -12,8 +12,18 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content:space-between;
+  padding: 8px;
 }
 
+.left, .right {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+
+}
+ 
 .profile-image {
   background: rebeccapurple;
   box-shadow: inset 2px 2px 4px rgba(0,0,0,.5);
@@ -45,4 +55,8 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  padding: 0;
+  margin: 0;  
+  gap: 16px;
 }
