--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -5,7 +5,40 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+
+  display:flex;
+  flex-direction: column;
+  justify-content: space-between;
+
 }
+a {
+  text-decoration: none;
+  color: rgb(32, 31, 31);
+
+}
+.left-links, .right-links{
+  display: flex;
+  gap: 18px;
+  list-style: none;
+  padding: 0px 16px;
+  
+}
+
+.header, .footer {
+  display:flex;
+  justify-content: space-between;
+}
+.footer {
+  background-color: rgb(184, 184, 184);
+}
+
+.content {
+  align-self: center;
+  text-align:center;
+}
+
+
+
 
 img {
   width: 600px;
@@ -16,6 +49,9 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+
+  margin-top: 16px;
+  padding: 8px;
 }
 
 input {
@@ -23,4 +59,5 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+
 }
