--- a/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
+++ b/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
@@ -5,6 +5,10 @@
 
 .container {
   text-align: center;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  grid-template-rows: 2rf 1rf 8rf 1rf;
+  gap:8px
 }
 
 .container div {
@@ -17,8 +21,21 @@
 
 .header {
   background-color: #393f4d;
+  grid-column: 1/3;
+  display: grid;
+  grid-template-columns: 1fr 4fr;
 }
+.menu{
+  display: grid;
 
+}
+.menu ul{
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  justify-items: end;
+  align-items: center;
+  list-style-type:none;
+}
 .menu ul,
 .menu li {
   font-size: 16px;
@@ -26,6 +43,10 @@
 
 .sidebar {
   background-color: #C50208;
+  grid-row:2/4;
+  display: grid;
+  grid-auto-rows: 1fr;
+  gap: 40px;
 }
 
 .sidebar .photo {
@@ -34,6 +55,8 @@
   font-size: 12px;
   font-weight: normal;
   border-radius: 10px;
+  display: grid;
+  align-content: center;
 }
 
 
@@ -42,12 +65,20 @@
   color: black;
   font-size: 16px;
   font-weight: normal;
+  display: grid;
+  align-content: center;
 }
 
 .nav {
   background-color: #C50208;
+  grid-column: 2/3;
+  grid-row: 2/3;
 }
-
+.nav ul{
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  list-style-type:none ;
+} 
 .nav ul li {
   font-size: 16px;
   text-transform: uppercase;
@@ -55,6 +86,10 @@
 
 .article {
   background-color: #bccbde;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-auto-rows: 250px;
+  gap: 16px;
 }
 
 .article p {
@@ -83,6 +118,8 @@
 
 .footer {
   background-color: #393f4d;
+  grid-column: 1/3;
+  margin-bottom: 8px;
 }
 
 .footer p {
